--- a/contact.html
+++ b/contact.html
@@ -149,10 +149,10 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#"><img src="facebook.svg" alt="Facebook" /></a>
-            <a href="#"><img src="twitter.svg" alt="Twitter" /></a>
-            <a href="#"><img src="instagram.svg" alt="Instagram" /></a>
-            <a href="#"><img src="linkedin.svg" alt="LinkedIn" /></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
@@ -162,6 +162,6 @@
         <p>&copy; 2025 EcoPrint. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
