--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script>
-    <link
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    /> -->
   </head>
   <body>
     <!-- Navbar Start -->
@@ -841,10 +843,10 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#"><img src="facebook.svg" alt="Facebook" /></a>
-            <a href="#"><img src="twitter.svg" alt="Twitter" /></a>
-            <a href="#"><img src="instagram.svg" alt="Instagram" /></a>
-            <a href="#"><img src="linkedin.svg" alt="LinkedIn" /></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
@@ -861,6 +863,6 @@
     <script src="contact.js"></script>
     <link rel="stylesheet" href="contact.css" /> -->
 
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
