--- a/shop.html
+++ b/shop.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Website</title>
     <link rel="stylesheet" href="style.css" />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -815,11 +819,17 @@
         <!-- Social Media -->
         <div class="footer-social">
           <h3>Follow Us</h3>
-          <div class="social-icons">
+          <!-- <div class="social-icons">
             <a href="#"><img src="facebook.svg" alt="Facebook" /></a>
             <a href="#"><img src="twitter.svg" alt="Twitter" /></a>
             <a href="#"><img src="instagram.svg" alt="Instagram" /></a>
             <a href="#"><img src="linkedin.svg" alt="LinkedIn" /></a>
+          </div> -->
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
@@ -831,6 +841,6 @@
     </footer>
     <!-- <script type="module" src="script.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@motionone/dom/dist/motion-one.umd.min.js"></script> -->
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
