add awards section and fix media scrollability

--- a/about.html
+++ b/about.html
@@ -45,6 +45,8 @@
       </div>
     </nav>
 
+
+    <!-- // About Home  -->
     <section class="about-section">
       <section class="about-container hero-50">
         <div class="section-overlay"></div>
@@ -196,8 +198,8 @@
       </section>
 
       <!-- Core values -->
-      <section class="core-values">
-        <div class="about-us section">
+      <section class="core-values about-us section">
+        <!-- <div class=""> -->
           <div class="container">
             <div class="row">
               <div class="col-lg-4">
@@ -211,10 +213,9 @@
               </div>
               <div class="col-lg-8">
                 <section class="services">
-                  <!-- <div class="pq-meter" aria-hidden="true">
+                  <div class="core-value-heading" >
                     <h2>Our Core Values</h2>
-                    <div class="pq-fill"></div>
-                  </div> -->
+                  </div>
                   <div class="service-card fadeIn">
                     <div class="icon">
                       <img src="img/sustainability.png" alt="sustainability" />
@@ -270,7 +271,7 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </section>
 
       <!-- ===================== PROCESS QUEST ===================== -->
@@ -434,6 +435,8 @@
         </div>
       </section>
 
+
+      <!-- // SDG SOLVED -->
       <section id="portfolio" class="our-portfolio">
         <div class="container">
           <div class="section-heading">
@@ -486,19 +489,19 @@
         </div>
       </section>
 
-      <!-- // Videos and Articles Section -->
+      <!-- // Media Videos and Articles Section -->
       <!-- Videos Section -->
-      <section class="video-section">
+      <section class="media-section">
         <div class="container">
           <div class="section-header">
             <h2>Videos</h2>
             <p>Watch our most featured media interviews and stories.</p>
           </div>
 
-          <div class="scroll-container">
-            <button class="scroll-btn left">&#10094;</button>
+          <div class="scroll-wrapper">
+            <button class="scroll-btn left" aria-label="Scroll left">&#10094;</button>
 
-            <ul class="video-grid">
+            <ul class="scroll-track videos-track">
               <!-- Example Card 1 -->
               <li class="video-card bg-blue">
                 <article>
@@ -656,7 +659,7 @@
       </section>
 
       <!-- Articles Section -->
-      <section class="video-section">
+      <section class="media-section">
         <div class="container">
           <div class="section-header">
             <h2>Articles</h2>
@@ -665,7 +668,7 @@
 
           <div class="scroll-container">
             <button class="scroll-btn left">&#10094;</button>
-            <ul class="video-grid">
+            <ul class="scroll-track videos-track">
               <li class="video-card bg-blue">
                 <article>
                   <div class="content">
@@ -863,6 +866,41 @@
         </div>
       </section>
 
+      <section class="awards-recognitions">
+        <div class="content-section">
+          
+      <!-- Left Text Section -->
+      <div class="left-content">
+        <h2>Awards & Recognitions</h2>
+        <p>
+          Over the years, our dedication and innovation have earned us several
+          honors. Each award reflects our commitment to sustainability,
+          excellence, and impactful solutions that shape a better future.
+        </p>
+      </div>
+
+      <!-- Right Cards Section -->
+      <div class="award-section">
+        <div class="card blue">
+          <h2>Enviromental Innovation Award</h2>
+          <p>Year 2023</p>
+        </div>
+        <div class="card orange">
+          <h2>Climate Action Award</h2>
+          <p>Year 2024</p>
+        </div>
+        <div class="card blue">
+          <h2>Enviromental Impact Award</h2>
+          <p>Year 2024</p>
+        </div>
+        <div class="card orange">
+          <h2>Sustainable Product Award</h2>
+          <p>Year 2025</p>
+        </div>
+      </div>
+        </div>
+      </section>
+
       <section class="pl-section" id="partners">
         <div class="pl-heading">
           <h2>Our Supporters</h2>
@@ -881,9 +919,9 @@
         </div>
       </section>
 
-      <section class="blogs">
+      <!-- <section class="blogs">
         <h1>Blogs</h1>
-      </section>
+      </section> -->
     </section>
 
     <footer class="creative-footer">
