--- a/index.html
+++ b/index.html
@@ -832,10 +832,13 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="shop.html">Shop</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#donate">Donate</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
 
