--- a/contact.html
+++ b/contact.html
@@ -165,6 +165,6 @@
         <p>&copy; 2025 EcoPrint. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
