--- a/index.html
+++ b/index.html
@@ -866,6 +866,6 @@
     <script src="contact.js"></script>
     <link rel="stylesheet" href="contact.css" /> -->
 
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
