--- a/shop.html
+++ b/shop.html
@@ -844,6 +844,6 @@
     </footer>
     <!-- <script type="module" src="script.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@motionone/dom/dist/motion-one.umd.min.js"></script> -->
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
