fix:error on navigations

--- a/about.html
+++ b/about.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - EcoPrint</title>
     <link rel="stylesheet" href="style.css" />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
-    ></script>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+    ></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -59,7 +61,6 @@
         </ul>
       </div>
     </nav>
-
 
     <!-- // About Home  -->
     <section class="about-section">
@@ -156,6 +157,8 @@
                 </svg>
               </button>
             </figure>
+          </div>
+        </div>
       </section>
 
       <!-- Video Modal -->
@@ -184,30 +187,34 @@
       <!-- Visson Mission Section -->
       <section class="mision-vision" id="goals">
         <div class="about-grid-info2">
-        <div class="container">
-          <div class="mission">
-            <div class="about-card1"  data-animate="left">
-            <h2 class="about-title">Our Mission</h2>
-            <p>
-              EcoPrint Generation’s mission is to transform plastic waste into sustainable 3D printing materials that empower education, innovation, and environmental conservation—turning waste into opportunity for a cleaner, smarter, and more inclusive future.
-            </p>
-          </div>
-          </div>
+          <div class="container">
+            <div class="mission">
+              <div class="about-card1" data-animate="left">
+                <h2 class="about-title">Our Mission</h2>
+                <p>
+                  EcoPrint Generation’s mission is to transform plastic waste
+                  into sustainable 3D printing materials that empower education,
+                  innovation, and environmental conservation—turning waste into
+                  opportunity for a cleaner, smarter, and more inclusive future.
+                </p>
+              </div>
+            </div>
 
-          <div class="vission">
-            <div class="about-card1" data-animate="right">
-            <h2 class="about-title">Our Vision</h2>
-            <p>
-              A continent where every learner can touch, see, and build science—
-              powered by sustainable materials and community innovation.
-            </p>
-            <ul class="tick-list-vission">
-              <li>Lower cost, higher access</li>
-              <li>Materials from recycled plastics</li>
-              <li>Practical STEM for real schools</li>
-            </ul>
-          </div>
-          </div>
+            <div class="vission">
+              <div class="about-card1" data-animate="right">
+                <h2 class="about-title">Our Vision</h2>
+                <p>
+                  A continent where every learner can touch, see, and build
+                  science— powered by sustainable materials and community
+                  innovation.
+                </p>
+                <ul class="tick-list-vission">
+                  <li>Lower cost, higher access</li>
+                  <li>Materials from recycled plastics</li>
+                  <li>Practical STEM for real schools</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -215,77 +222,76 @@
       <!-- Core values -->
       <section class="core-values about-us section" id="values">
         <!-- <div class=""> -->
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4">
-                <div
-                  class="left-image wow fadeIn"
-                  data-wow-duration="1s"
-                  data-wow-delay="0.2s"
-                >
-                  <img src="img/about-left-image.png" alt="person graphic" />
-                </div>
-              </div>
-              <div class="col-lg-8">
-                <section class="services">
-                  <div class="core-value-heading" >
-                    <h2>Our Core Values</h2>
-                  </div>
-                  <div class="service-card fadeIn">
-                    <div class="icon">
-                      <img src="img/sustainability.png" alt="sustainability" />
-                    </div>
-                    <div class="right-text">
-                      <h4>Sustainability</h4>
-                      <p>
-                        We turn waste into opportunity through eco-friendly 3D
-                        printing.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="service-card fadeIn">
-                    <div class="icon">
-                      <img src="img/innovation.png" alt="Innovation" />
-                    </div>
-                    <div class="right-text">
-                      <h4>Innovation</h4>
-                      <p>
-                        We create smart, modern solutions that drive positive
-                        change.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="service-card fadeIn">
-                    <div class="icon">
-                      <img src="img/education.png" alt="education" />
-                    </div>
-                    <div class="right-text">
-                      <h4>Education</h4>
-                      <p>
-                        We empower learners and creators through training and
-                        mentorship.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="service-card fadeIn">
-                    <div class="icon">
-                      <img src="img/community.png" alt="community" />
-                    </div>
-                    <div class="right-text">
-                      <h4>Community</h4>
-                      <p>
-                        We collaborate to build a greener, more connected
-                        future.
-                      </p>
-                    </div>
-                  </div>
-                </section>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <div
+                class="left-image wow fadeIn"
+                data-wow-duration="1s"
+                data-wow-delay="0.2s"
+              >
+                <img src="img/about-left-image.png" alt="person graphic" />
               </div>
             </div>
+            <div class="col-lg-8">
+              <section class="services">
+                <div class="core-value-heading">
+                  <h2>Our Core Values</h2>
+                </div>
+                <div class="service-card fadeIn">
+                  <div class="icon">
+                    <img src="img/sustainability.png" alt="sustainability" />
+                  </div>
+                  <div class="right-text">
+                    <h4>Sustainability</h4>
+                    <p>
+                      We turn waste into opportunity through eco-friendly 3D
+                      printing.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="service-card fadeIn">
+                  <div class="icon">
+                    <img src="img/innovation.png" alt="Innovation" />
+                  </div>
+                  <div class="right-text">
+                    <h4>Innovation</h4>
+                    <p>
+                      We create smart, modern solutions that drive positive
+                      change.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="service-card fadeIn">
+                  <div class="icon">
+                    <img src="img/education.png" alt="education" />
+                  </div>
+                  <div class="right-text">
+                    <h4>Education</h4>
+                    <p>
+                      We empower learners and creators through training and
+                      mentorship.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="service-card fadeIn">
+                  <div class="icon">
+                    <img src="img/community.png" alt="community" />
+                  </div>
+                  <div class="right-text">
+                    <h4>Community</h4>
+                    <p>
+                      We collaborate to build a greener, more connected future.
+                    </p>
+                  </div>
+                </div>
+              </section>
+            </div>
           </div>
+        </div>
         <!-- </div> -->
       </section>
 
@@ -450,7 +456,6 @@
         </div>
       </section>
 
-
       <!-- // SDG SOLVED -->
       <section id="portfolio" class="our-portfolio">
         <div class="container">
@@ -514,7 +519,9 @@
           </div>
 
           <div class="scroll-wrapper">
-            <button class="scroll-btn left" aria-label="Scroll left">&#10094;</button>
+            <button class="scroll-btn left" aria-label="Scroll left">
+              &#10094;
+            </button>
 
             <ul class="scroll-track videos-track">
               <!-- Example Card 1 -->
@@ -883,36 +890,36 @@
 
       <section class="awards-recognitions" id="awards">
         <div class="content-section">
-          
-      <!-- Left Text Section -->
-      <div class="left-content">
-        <h2>Awards & Recognitions</h2>
-        <p>
-          Over the years, our dedication and innovation have earned us several
-          honors. Each award reflects our commitment to sustainability,
-          excellence, and impactful solutions that shape a better future.
-        </p>
-      </div>
+          <!-- Left Text Section -->
+          <div class="left-content">
+            <h2>Awards & Recognitions</h2>
+            <p>
+              Over the years, our dedication and innovation have earned us
+              several honors. Each award reflects our commitment to
+              sustainability, excellence, and impactful solutions that shape a
+              better future.
+            </p>
+          </div>
 
-      <!-- Right Cards Section -->
-      <div class="award-section">
-        <div class="card blue">
-          <h2>Enviromental Innovation Award</h2>
-          <p>Year 2023</p>
-        </div>
-        <div class="card orange">
-          <h2>Climate Action Award</h2>
-          <p>Year 2024</p>
-        </div>
-        <div class="card blue">
-          <h2>Enviromental Impact Award</h2>
-          <p>Year 2024</p>
-        </div>
-        <div class="card orange">
-          <h2>Sustainable Product Award</h2>
-          <p>Year 2025</p>
-        </div>
-      </div>
+          <!-- Right Cards Section -->
+          <div class="award-section">
+            <div class="card blue">
+              <h2>Enviromental Innovation Award</h2>
+              <p>Year 2023</p>
+            </div>
+            <div class="card orange">
+              <h2>Climate Action Award</h2>
+              <p>Year 2024</p>
+            </div>
+            <div class="card blue">
+              <h2>Enviromental Impact Award</h2>
+              <p>Year 2024</p>
+            </div>
+            <div class="card orange">
+              <h2>Sustainable Product Award</h2>
+              <p>Year 2025</p>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -921,16 +928,15 @@
           <h2>Our Supporters</h2>
         </div>
         <div class="support">
-            <div class="supporter-logo">
-              <img src="img/ctg.png" alt="Partner 1" />
-            </div>
+          <div class="supporter-logo">
+            <img src="img/ctg.png" alt="Partner 1" />
+          </div>
 
-            <div class="supporter-logo">
-              <img src="img/Infitech logo.png" alt="Partner 2" />
-            </div>
+          <div class="supporter-logo">
+            <img src="img/Infitech logo.png" alt="Partner 2" />
+          </div>
         </div>
       </section>
-
     </section>
 
     <footer class="creative-footer">
