fix: order item to shop navigation

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
       <div class="shop-container">
         <!-- Card 1 -->
-        <a href="laptops.html" class="shop-card" data-animate>
+        <a href="shop.html" class="shop-card" data-animate>
           <img src="img/edu.jpg" alt="Stem models" />
           <div class="shop-overlay">
             <h3>STEM Models</h3>
@@ -436,7 +436,7 @@
         </a>
 
         <!-- Card 2 -->
-        <a href="accessories.html" class="shop-card" data-animate>
+        <a href="shop.html" class="shop-card" data-animate>
           <img src="img/prototype.jpeg" alt="Accessories Collection" />
           <div class="shop-overlay">
             <h3>Archtecture <br />Prototype</h3>
@@ -445,7 +445,7 @@
         </a>
 
         <!-- Card 3 -->
-        <a href="cameras.html" class="shop-card" data-animate>
+        <a href="shop.html" class="shop-card" data-animate>
           <img src="img/beauty2.jpeg" alt="Cameras Collection" />
           <div class="shop-overlay">
             <h3>3D printed <br />Accessories</h3>
